servers/gaming-vendor-module/gaming-vendor-module-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gaming-vendor-module-deployment
  labels:
    app: gaming-vendor-module-service
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gaming-vendor-module-service
      version: v1
  template:
    metadata:
      labels:
        app: gaming-vendor-module-service
        version: v1
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9090"
        prometheus.io/path: "/metrics"
    spec:
      serviceAccountName: gaming-serviceaccount
      containers:
      - name: gaming-vendor-module-service
        image: 083118395813.dkr.ecr.ap-south-1.amazonaws.com/gaming-demo:latest
        ports:
        - containerPort: 3001  # Existing port configuration
        readinessProbe:
          httpGet:
            path: /readiness
            port: 3001
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /liveness
            port: 3001
          initialDelaySeconds: 10
          periodSeconds: 30
