servers/gaming-vendor-module/gaming-vendor-module-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gaming-vendor-module-service
spec:
  selector:
    app: gaming-vendor-module
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
